<resources>

    <string name="app_name">EPKuer</string>
    <string name="hello_world">Hello EPKUer!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_login">Login</string>
    <string name="title_signup">Signup</string>
    <string name="title_reslist">食堂列表</string>
    <string name="title_resinfo">食堂信息</string>
    <string name="title_comment">点评食堂</string>
    <string name="title_complain">投诉</string>
    <string name="title_cmtlist">评价列表</string>
    <string name="strInputAccHint">Username</string>
    <string name="strInputPswHint">Password</string>
    <string name="strInputPswHint2">Confirm Password</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="login">登 录</string>
    <string name="signup">注 册</string>
    <string name="title_activity_restaurant">餐厅</string>
    <string name="view_more"><u>更多图片</u></string>
    <string name="recommendation">推荐菜: </string>
    <string name="fee">平均价格: </string>
    <string name="crowd">拥挤程度: </string>
    <string name="crowd_high">高</string>
    <string name="crowd_mid">中</string>
    <string name="crowd_low">低</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="new_comment">最新点评</string>
    <string name="view_comment">更多点评</string>
    <string name="load_more">数据加载中...</string>
    <string name="complain">我要投诉</string>
    <string name="my_comment">我要点评</string>
    <string name="title_activity_comment">我的点评</string>

</resources>