<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@drawable/default_bg"
        android:orientation="vertical" >

        <RelativeLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0px"
            android:layout_marginRight="15.0px"
            android:layout_marginTop="62.0px"
            android:background="@drawable/login_back"
            android:paddingBottom="50.0px"
            android:paddingTop="21.0px" >

            <EditText
                android:id="@+id/signup_edit_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5.0px"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:background="@drawable/qq_edit_login"
                android:hint="@string/strInputAccHint"
                android:inputType="text"
                android:maxLength="10"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/signup_edit_account"
                android:layout_alignLeft="@+id/signup_edit_account"
                android:layout_alignTop="@+id/signup_edit_account"
                android:layout_marginRight="15.0sp"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strAccInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <EditText
                android:id="@+id/signup_edit_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/signup_edit_account"
                android:layout_alignRight="@+id/signup_edit_account"
                android:layout_below="@+id/signup_edit_account"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/qq_edit_login"
                android:inputType="textPassword"
                android:hint="@string/strInputPswHint"
                android:maxLength="16"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/signup_edit_pwd"
                android:layout_alignRight="@+id/TextView03"
                android:layout_alignTop="@+id/signup_edit_pwd"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strPswInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />
            
            <EditText
                android:id="@+id/signup_edit_pwd2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/signup_edit_account"
                android:layout_alignRight="@+id/signup_edit_account"
                android:layout_below="@+id/signup_edit_pwd"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/qq_edit_login"
                android:inputType="textPassword"
                android:hint="@string/strInputPswHint2"
                android:maxLength="16"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/signup_edit_pwd2"
                android:layout_alignRight="@+id/TextView03"
                android:layout_alignTop="@+id/signup_edit_pwd2"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strPswInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />


            <Button
                android:id="@+id/signup_btn_signup"
                android:layout_width="130.0px"
                android:layout_height="60.0px"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/signup_edit_pwd2"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="7.0px"
                android:text="@string/signup" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>